--- a/gradle.properties
+++ b/gradle.properties
@@ -16,5 +16,5 @@ org.gradle.jvmargs=-Xmx2048m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-JavaTests.properties=D:/Programming/Android/.android/javatests.properties
+JavaTests.properties=C:/Programming/Android/javatests.properties
 
