--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,9 +75,9 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-compiler:2.9"
     provided 'javax.annotation:jsr250-api:1.0'
     /*Moxy*/
-    compile 'com.arello-mobile:moxy:1.4.5'
-    provided 'com.arello-mobile:moxy-compiler:1.4.5'
-    compile 'com.arello-mobile:moxy-android:1.4.5'
+    compile 'com.arello-mobile:moxy:1.5.3'
+    annotationProcessor 'com.arello-mobile:moxy-compiler:1.5.3'
+    compile 'com.arello-mobile:moxy-android:1.5.3'
     /*RxJava*/
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
