--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     /*Testing*/
     testCompile 'junit:junit:4.12'
@@ -79,6 +80,7 @@ dependencies {
     compile 'com.arello-mobile:moxy:1.5.3'
     annotationProcessor 'com.arello-mobile:moxy-compiler:1.5.3'
     compile 'com.arello-mobile:moxy-android:1.5.3'
+    compile 'com.arello-mobile:moxy-app-compat:1.5.3'
     /*RxJava*/
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
@@ -93,6 +95,8 @@ dependencies {
     compile 'com.google.firebase:firebase-database:11.2.0'
     /*Timber Logging*/
     compile 'com.jakewharton.timber:timber:4.5.1'
+    /*Cicerone*/
+    compile 'ru.terrakok.cicerone:cicerone:2.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
