--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,6 +97,8 @@ dependencies {
     compile 'com.jakewharton.timber:timber:4.5.1'
     /*Cicerone*/
     compile 'ru.terrakok.cicerone:cicerone:2.1.0'
+    /*Jackson*/
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
