--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ android {
         release {
         }
     }
-    compileSdkVersion 25
+    compileSdkVersion 27
     buildToolsVersion '25.0.2'
     defaultConfig {
         applicationId "com.drojj.javatests"
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -57,9 +57,9 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:appcompat-v7:27.0.2'
+    compile 'com.android.support:design:27.0.2'
+    compile 'com.android.support:cardview-v7:27.0.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     /*Testing*/
     testCompile 'junit:junit:4.12'
@@ -73,8 +73,8 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     /*Dagger2*/
-    compile 'com.google.dagger:dagger:2.9'
-    annotationProcessor "com.google.dagger:dagger-compiler:2.9"
+    compile 'com.google.dagger:dagger:2.10'
+    annotationProcessor "com.google.dagger:dagger-compiler:2.10"
     provided 'javax.annotation:jsr250-api:1.0'
     /*Moxy*/
     compile 'com.arello-mobile:moxy:1.5.3'
@@ -83,22 +83,22 @@ dependencies {
     compile 'com.arello-mobile:moxy-app-compat:1.5.3'
     /*RxJava*/
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.6'
     /*ButterKnife*/
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     /*Firebase*/
-    compile 'com.google.firebase:firebase-core:11.2.0'
+    compile 'com.google.firebase:firebase-core:11.6.2'
     //Auth//
-    compile 'com.google.firebase:firebase-auth:11.2.0'
+    compile 'com.google.firebase:firebase-auth:11.6.2'
     //Database//
-    compile 'com.google.firebase:firebase-database:11.2.0'
+    compile 'com.google.firebase:firebase-database:11.6.2'
     /*Timber Logging*/
     compile 'com.jakewharton.timber:timber:4.5.1'
     /*Cicerone*/
     compile 'ru.terrakok.cicerone:cicerone:2.1.0'
-    /*Jackson*/
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
+    /*JSON Parcer*/
+    compile 'com.google.code.gson:gson:2.8.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
